Strategy discussion added for a few more Intrigue cards. In addition, the look of the card information has been improved in the following ways: 1) all popovers now display correctly (fixing a problem inadvertendly created last time where there were spaces in the glossary terms), 2) popover triggers now only show for the terms itself, instead of including following full stops, commas and closed brackets, 3) where a card name is pluralised, the link now covers the entire word rather than leaving off the final S

--- a/main.css
+++ b/main.css
@@ -34,6 +34,7 @@ footer {
     background-color: #ddd;
     padding: 10px;
     flex-shrink: 0; /* needed for Safari */
+    margin-top: 20px;
 }
 
 h1.centre, h2.centre, h3.centre, h4.centre {
